# n64-sniffer

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  program.sh  reset.sh  start_debug_server.sh  upload_and_program.sh
.devcontainer/: Dockerfile  devcontainer.json
.nvim-dap/: nvim-dap.lua
include/: util.hpp
libs/usb/: CMakeLists.txt
libs/usb/include/: usb.hpp  usb_descriptors.hpp
libs/usb/src/: usb.cpp  usb_descriptors.cpp
src/: main.cpp  n64-protocol.pio  squarewave.pio
